test/compilable/imports/test11563core_bitop.d
module imports.test11563core_bitop;
