test/fail_compilation/imports/test22121/package.d
module fail_compilation.imports.test22121;
